Closed Bug 776413 Opened 13 years ago Closed 13 years ago

Async scrolling: initial displayport is going through the wrong codepath

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: drs, Assigned: drs)

References

Details

Attachments

(1 file)

Initial displayport seems to be set to the viewport somewhere using a different code path. It is not oversized for the first paint. This causes the unpleasant delay as soon as I pan around during page load. We have to oversize that first displayport too.
Blocks: 745136
QA Contact: bugzilla
This needs to be fixed properly by setting the displayport to a larger area than just the viewport but before the page has already been loaded. This patch will mask it to look decent once the page has finished loading and before panning.
Assignee: nobody → bugzilla
Attachment #644803 - Flags: review?(gal)
QA Contact: bugzilla
Attachment #644803 - Flags: review?(gal) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: