Bug 776413: Temporary workaround, fix initial displayport on page load. r=gal

This needs to be fixed properly by setting the displayport to a larger area than
just the viewport but before the page has already been loaded. This patch will
mask it to look decent once the page has finished loading and before panning.